--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
-  "presets": ["@babel/preset-react", "@babel/preset-env"],
+  "presets": [
+    "@babel/preset-react",
+    [
+      "@babel/preset-env",
+      {
+        "targets": "last 2 versions, ie 11, > 0.5%, not dead",
+        "useBuiltIns": "entry"
+      }
+    ]
+  ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
