--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -45,6 +45,7 @@ jobs:
         git clone https://github.com/NDLANO/h5p-editor-shape.git
         git clone https://github.com/NDLANO/h5p-editor-image-radio-group
 
+        npm i -g webpack@2.7.0
         if [ -d "h5p-editor-three-image" ]; then pushd h5p-editor-three-image && npm install && npm run build; popd; fi
 
         
