change correct plugin

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -35,7 +35,13 @@ jobs:
         if [ -d "h5p-open-ended-question" ]; then pushd h5p-open-ended-question && npm install && npm run build; popd; fi
         if [ -d "h5p-simple-multiple-choice" ]; then pushd h5p-simple-multiple-choice && npm install && npm run build; popd; fi
         
-        if [ -d "h5p-editor-audio-recorder" ]; then pushd h5p-editor-audio-recorder && npm install && npm run build; popd; fi
+        if [ -d "h5p-editor-audio-recorder" ]; then 
+          pushd h5p-editor-audio-recorder 
+          npm i webpack@2.7.0
+          npm i
+          webpack
+          popd
+        fi
 
         rm -rf h5p-chart h5p-shape h5p-editor-shape h5p-editor-three-image
         
@@ -46,13 +52,7 @@ jobs:
         git clone https://github.com/NDLANO/h5p-editor-image-radio-group
 
         
-        if [ -d "h5p-editor-three-image" ]; then 
-          pushd h5p-editor-three-image 
-          npm i -g webpack@2.7.0 
-          npm i 
-          yes | npm run build
-          popd
-        fi
+        if [ -d "h5p-editor-three-image" ]; then pushd h5p-editor-three-image && npm i -g webpack@2.7.0 && npm install && npm run build; popd; fi
 
         
         cp -r ../h5p-three-image .
