--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -14,11 +14,15 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '8'
+        node-version: '15.x'
     - run: |
         cd h5p-three-image
         npm ci
         npm run build
+    - name: Use Node.js 8
+      uses: actions/setup-node@v2
+      with:
+        node-version: '8'
     - run: |
         
         mkdir -p dist
