--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -42,6 +42,7 @@ jobs:
         if [ -d "h5p-editor-audio-recorder" ]; then 
           pushd h5p-editor-audio-recorder 
           git checkout bec6fe1
+          npm cache clean -f
           npm i webpack@2.7.0 webpack-sources@1.0.1
           npm ci
           webpack
