--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -62,6 +62,10 @@ jobs:
 
         
         cp -r ../h5p-three-image .
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '15.x'
     - run: |
         cd dist
         ls
