--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -4,76 +4,75 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      with: 
-        path: h5p-three-image
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '15.x'
-    - run: |
-        cd h5p-three-image
-        npm ci
-        npm run build
-    - name: Use Node.js 8
-      uses: actions/setup-node@v2
-      with:
-        node-version: '8'
-    - run: |
-        
-        mkdir -p dist
-        cd dist
-        
+      - uses: actions/checkout@v2
+        with:
+          path: h5p-three-image
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "15.x"
+      - run: |
+          cd h5p-three-image
+          npm install
+          npm run build
+      - name: Use Node.js 8
+        uses: actions/setup-node@v2
+        with:
+          node-version: "8"
+      - run: |
 
-        while read -r repo; do git clone ${repo}; done < ../h5p-three-image/build_info/repos
-        if [ -d "h5p-editor-color-selector" ]; then pushd h5p-editor-color-selector && git checkout b0ae8c941cedcec73df6b186663eae6df8679810; popd; fi
-        if [ -d "h5p-dialogcards" ]; then pushd h5p-dialogcards && npm install && npm run build; popd; fi
-        if [ -d "h5p-drag-text" ]; then pushd h5p-drag-text && npm install && npm run build; popd; fi
-        if [ -d "h5p-questionnaire" ]; then pushd h5p-questionnaire && npm install && npm run build; popd; fi
-        if [ -d "h5p-drag-question" ]; then pushd h5p-drag-question && npm install && npm run build; popd; fi
-        if [ -d "h5p-interactive-video" ]; then pushd h5p-interactive-video && npm install && npm run build; popd; fi
-        if [ -d "h5p-open-ended-question" ]; then pushd h5p-open-ended-question && npm install && npm run build; popd; fi
-        if [ -d "h5p-simple-multiple-choice" ]; then pushd h5p-simple-multiple-choice && npm install && npm run build; popd; fi
-        
-        if [ -d "h5p-editor-audio-recorder" ]; then 
-          pushd h5p-editor-audio-recorder 
-          git checkout bec6fe1
-          npm cache clean -f
-          npm i webpack@2.7.0 webpack-sources@1.0.1 -g
-          npm ci
-          webpack
-          popd
-        fi
+          mkdir -p dist
+          cd dist
 
-        rm -rf h5p-chart h5p-shape h5p-editor-shape h5p-editor-three-image
-        
-        git clone https://github.com/NDLANO/h5p-editor-three-image.git
-        git clone https://github.com/NDLANO/h5p-chart.git
-        git clone https://github.com/NDLANO/h5p-shape.git
-        git clone https://github.com/NDLANO/h5p-editor-shape.git
-        git clone https://github.com/NDLANO/h5p-editor-image-radio-group
 
-        
-        if [ -d "h5p-editor-three-image" ]; then pushd h5p-editor-three-image && npm i -g webpack@2.7.0 && npm install && npm run build; popd; fi
+          while read -r repo; do git clone ${repo}; done < ../h5p-three-image/build_info/repos
+          if [ -d "h5p-editor-color-selector" ]; then pushd h5p-editor-color-selector && git checkout b0ae8c941cedcec73df6b186663eae6df8679810; popd; fi
+          if [ -d "h5p-dialogcards" ]; then pushd h5p-dialogcards && npm install && npm run build; popd; fi
+          if [ -d "h5p-drag-text" ]; then pushd h5p-drag-text && npm install && npm run build; popd; fi
+          if [ -d "h5p-questionnaire" ]; then pushd h5p-questionnaire && npm install && npm run build; popd; fi
+          if [ -d "h5p-drag-question" ]; then pushd h5p-drag-question && npm install && npm run build; popd; fi
+          if [ -d "h5p-interactive-video" ]; then pushd h5p-interactive-video && npm install && npm run build; popd; fi
+          if [ -d "h5p-open-ended-question" ]; then pushd h5p-open-ended-question && npm install && npm run build; popd; fi
+          if [ -d "h5p-simple-multiple-choice" ]; then pushd h5p-simple-multiple-choice && npm install && npm run build; popd; fi
 
-        
-        cp -r ../h5p-three-image .
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '15.x'
-    - run: |
-        cd dist
-        ls
-        npm install -g h5p
-        h5p pack -r h5p-three-image h5p-three-image.h5p
-        h5p validate h5p-three-image.h5p
-    - name: Archive code coverage results
-      uses: actions/upload-artifact@v2
-      with:
-        name: h5p-three-image.h5p
-        path: dist/h5p-three-image.h5p
+          if [ -d "h5p-editor-audio-recorder" ]; then 
+            pushd h5p-editor-audio-recorder 
+            git checkout bec6fe1
+            npm cache clean -f
+            npm i webpack@2.7.0 webpack-sources@1.0.1 -g
+            npm ci
+            webpack
+            popd
+          fi
+
+          rm -rf h5p-chart h5p-shape h5p-editor-shape h5p-editor-three-image
+
+          git clone https://github.com/NDLANO/h5p-editor-three-image.git
+          git clone https://github.com/NDLANO/h5p-chart.git
+          git clone https://github.com/NDLANO/h5p-shape.git
+          git clone https://github.com/NDLANO/h5p-editor-shape.git
+          git clone https://github.com/NDLANO/h5p-editor-image-radio-group
+
+
+          if [ -d "h5p-editor-three-image" ]; then pushd h5p-editor-three-image && npm i -g webpack@2.7.0 && npm install && npm run build; popd; fi
+
+
+          cp -r ../h5p-three-image .
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "15.x"
+      - run: |
+          cd dist
+          ls
+          npm install -g h5p
+          h5p pack -r h5p-three-image h5p-three-image.h5p
+          h5p validate h5p-three-image.h5p
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: h5p-three-image.h5p
+          path: dist/h5p-three-image.h5p
