Run only if the commit is on the main branch

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -79,9 +79,8 @@ jobs:
           path: dist/h5p-three-image.h5p
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
+          if: ${{ github.ref == 'refs/heads/master' }}
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: true
-          title: "Release"
           files: |
             dist/h5p-three-image.h5p
