Create release only if commiting to main branch

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -79,7 +79,7 @@ jobs:
           path: dist/h5p-three-image.h5p
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          if: ${{ github.ref == 'refs/heads/master' }}
+          if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           files: |
