--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -81,6 +81,6 @@ jobs:
         with:
           if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
+          automatic_release_tag: "latest_release"
           files: |
             dist/h5p-three-image.h5p
