--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -77,24 +77,12 @@ jobs:
         with:
           name: h5p-three-image.h5p
           path: dist/h5p-three-image.h5p      
-      - id: set_library
-        run: |
-          ls
-          JSON=$(cat ./h5p-three-image/library.json)
-          echo "::set-output name=library::${JSON//'%'/'%25'}"
       - uses: "marvinpinto/action-automatic-releases@latest" # https://github.com/marvinpinto/actions/tree/master/packages/automatic-releases
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: |
-            "${{ 
-              format(
-                'v{0}.{1}.{2}',
-                fromJson(steps.set_library.outputs.library).majorVersion,
-                fromJson(steps.set_library.outputs.library).minorVersion,
-                fromJson(steps.set_library.outputs.library).patchVersion
-              )
-            }}"
+          automatic_release_tag: "latest"
+          title: "Release"
           prerelease: false
           files: |
             dist/h5p-three-image.h5p
