--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -85,7 +85,7 @@ jobs:
           echo "::set-output name=library::${JSON//'%'/'%25'}"
       - name: Debug
         run: |
-          echo "${{ fromJson(toJson(steps.set_library.outputs)) }}"
+          echo "${{ steps.set_library.outputs.library }}"
 
       - uses: "marvinpinto/action-automatic-releases@latest" # https://github.com/marvinpinto/actions/tree/master/packages/automatic-releases
         # if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
