--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -39,7 +39,11 @@ jobs:
             popd
           fi
 
-          rm -rf h5p-editor-three-image h5p-three-sixty
+          # Override dependencies
+          rm -rf \
+            h5p-editor-three-image \
+            h5p-three-sixty \
+            h5p-video
 
           git clone https://github.com/NDLANO/h5p-editor-three-image.git
           git clone https://github.com/NDLANO/h5p-editor-image-radio-group.git
