--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -45,10 +45,10 @@ jobs:
             h5p-three-sixty \
             h5p-video
 
-          git clone https://github.com/NDLANO/h5p-editor-three-image.git
-          git clone https://github.com/NDLANO/h5p-editor-image-radio-group.git
-          git clone https://github.com/NDLANO/h5p-three-sixty.git
-          git clone https://github.com/NDLANO/h5p-video.git
+          git clone https://github.com/NDLA-H5P/h5p-editor-three-image.git
+          git clone https://github.com/NDLA-H5P/h5p-editor-image-radio-group.git
+          git clone https://github.com/NDLA-H5P/h5p-three-sixty.git
+          git clone https://github.com/NDLA-H5P/h5p-video.git
 
           if [ -d "h5p-editor-three-image" ]; then pushd h5p-editor-three-image && npm ci && npm run build; popd; fi
 
