add ndla show when

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -43,12 +43,16 @@ jobs:
           rm -rf \
             h5p-editor-three-image \
             h5p-three-sixty \
-            h5p-video
+            h5p-video \
+            h5p-font-icons \
+            h5p-show-when
 
           git clone https://github.com/NDLA-H5P/h5p-editor-three-image.git
           git clone https://github.com/NDLA-H5P/h5p-editor-image-radio-group.git
           git clone https://github.com/NDLA-H5P/h5p-three-sixty.git
           git clone https://github.com/NDLA-H5P/h5p-video.git
+          git clone https://github.com/NDLA-H5P/h5p-font-icons.git
+          git clone https://github.com/NDLA-H5P/h5p-show-when.git
 
           if [ -d "h5p-editor-three-image" ]; then pushd h5p-editor-three-image && npm ci && npm run build; popd; fi
 
