revert to use h5p show-when

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -44,8 +44,8 @@ jobs:
             h5p-editor-three-image \
             h5p-three-sixty \
             h5p-video \
-            h5p-font-icons \
-            h5p-editor-show-when
+            h5p-font-icons
+          mv h5p-editor-show-when h5p-h5p-editor-show-when
 
           git clone https://github.com/NDLA-H5P/h5p-editor-three-image.git
           git clone https://github.com/NDLA-H5P/h5p-editor-image-radio-group.git
