--- a/package.json
+++ b/package.json
@@ -29,21 +29,21 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "eslint": "^8.19.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1",
     "file-loader": "^6.2.0",
     "node-sass": "^7.0.1",
-    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.73.0",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "core-js": "^3.24.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
