--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
@@ -45,5 +46,9 @@
     "core-js": "^3.24.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "engines": {
+    "npm": ">=8.15.0",
+    "node": ">=16.17.0"
   }
 }
