Update build chain

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,9 +11,10 @@
     "node": true
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 9,
+    "requireConfigFile": false,
+    "ecmaVersion": 2020,
     "sourceType": "module"
   },
   "settings": {
@@ -40,7 +41,6 @@
     "no-extra-boolean-cast": "off",
     "no-console": ["error", {"allow": ["warn", "error"]}],
     "no-restricted-globals": [2, "event"],
-    "react/prop-types": 0,
-    "simple-import-sort/sort": "warn"
+    "react/prop-types": 0
   }
 }
