--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.30.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.77.8",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
